# LevelUp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.default
components/dns_server/: dns_server.c
docs/: building.md  dashboard.md  mqtt-discovery.md  mqtt-manual.md  rest-sensors.md
docs/superpowers/plans/: 2026-06-16-leveling-guidance.md  2026-06-17-remote-zero-wifi-reconfig.md
docs/superpowers/specs/: 2026-06-16-leveling-guidance-design.md  2026-06-17-remote-zero-wifi-reconfig-design.md
ha/: README.md  levelup-bubble-card.js
main/: CMakeLists.txt  Kconfig  OLDdisplay.c  app_main.c  audio_mgr.c  audio_mgr.h  board.h  button_mgr.c  button_mgr.h  display.c  display.h  ds_digit_36.c  ds_digit_36.h  expander.c  expander.h  i2c_bus.c  i2c_bus.h  idf_component.yml  imu_task.c  imu_task.h  level_bubble.c  level_bubble.h  leveling.c  leveling.h  lvgl_port.c  lvgl_port.h  main_ui_bg.c  main_ui_bg.h  mqtt_mgr.c  mqtt_mgr.h  splash_screen.c  splash_screen.h  ui.c  ui.c.BeforeColorTest  ui.h  watchdog.c  watchdog.h  wifi_mgr.c  wifi_mgr.h
test/leveling/: compile_flags.txt  test_leveling.c
tools/: flash_remote.sh  patch_font_fallback.sh  scp_bin.sh
